--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,40 @@
+aiofiles==24.1.0
 aiosqlite==0.20.0
+alembic==1.13.2
 annotated-types==0.7.0
 anyio==4.4.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+bcrypt==4.1.2
 certifi==2024.7.4
+cffi==1.16.0
 click==8.1.7
+cryptography==43.0.0
 dnspython==2.6.1
-email_validator==2.2.0
+email_validator==2.1.2
 fastapi==0.111.1
 fastapi-cli==0.0.4
+fastapi-users==13.0.0
+fastapi-users-db-sqlalchemy==6.0.1
+greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
 Jinja2==3.1.4
+makefun==1.15.4
+Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+pwdlib==0.2.0
+pycparser==2.22
 pydantic==2.8.2
+pydantic-settings==2.3.4
 pydantic_core==2.20.1
 Pygments==2.18.0
+PyJWT==2.8.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
