--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
 aiofiles==24.1.0
 aiosqlite==0.20.0
 alembic==1.13.2
+amqp==5.2.0
 annotated-types==0.7.0
 anyio==4.4.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
+async-timeout==4.0.3
+asyncpg==0.29.0
 bcrypt==4.1.2
+billiard==4.2.0
+celery==5.4.0
 certifi==2024.7.4
 cffi==1.16.0
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 cryptography==43.0.0
 dnspython==2.6.1
 email_validator==2.1.2
@@ -23,11 +31,16 @@ httptools==0.6.1
 httpx==0.27.0
 idna==3.7
 Jinja2==3.1.4
+kombu==5.3.7
 makefun==1.15.4
 Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+pillow==10.4.0
+prompt_toolkit==3.0.47
+psycopg==3.2.1
+psycopg2==2.9.9
 pwdlib==0.2.0
 pycparser==2.22
 pydantic==2.8.2
@@ -35,19 +48,23 @@ pydantic-settings==2.3.4
 pydantic_core==2.20.1
 Pygments==2.18.0
 PyJWT==2.8.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+redis==5.0.7
 rich==13.7.1
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.31
 starlette==0.37.2
 typer==0.12.3
 typing_extensions==4.12.2
+tzdata==2024.1
 uvicorn==0.30.3
 uvloop==0.19.0
+vine==5.1.0
 watchfiles==0.22.0
+wcwidth==0.2.13
 websockets==12.0
-
-pillow~=10.4.0
